feature : add pass test inventory api, fix :  create search in findAll api in supplier and inventory, fix : delete unit and supplier api to check inventory exist
